// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<h2>
  Hvor bor du?
</h2>
<div>
  <label
    data-weight="medium"
    for="components-select--controlled"
  >
    Fylke
  </label>
  <select id="components-select--controlled">
    <option value>
      Velg et fylke …
    </option>
    <option value="Akershus">
      Akershus
    </option>
    <option value="Agder">
      Agder
    </option>
    <option value="Buskerud">
      Buskerud
    </option>
    <option value="Finnmark">
      Finnmark
    </option>
    <option value="Innlandet">
      Innlandet
    </option>
    <option value="Nordland">
      Nordland
    </option>
    <option value="Rogaland">
      Rogaland
    </option>
  </select>
</div>
<div>
  <label
    data-weight="medium"
    for="components-select--controlled-by"
  >
    By
  </label>
  <select id="components-select--controlled-by">
    <option value>
      Velg en by …
    </option>
  </select>
</div>
`;

exports[`Disabled 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-select--disabled"
  >
    Fylke
  </label>
  <select
    disabled
    id="components-select--disabled"
  >
    <option
      value
      selected
    >
      Velg et fylke …
    </option>
    <option value="akershus">
      Akershus
    </option>
    <option value="agder">
      Agder
    </option>
    <option value="buskerud">
      Buskerud
    </option>
    <option value="finnmark">
      Finnmark
    </option>
    <option value="innlandet">
      Innlandet
    </option>
    <option value="nordland">
      Nordland
    </option>
    <option value="rogaland">
      Rogaland
    </option>
  </select>
</div>
`;

exports[`Preview 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-select--preview"
  >
    Fylke
  </label>
  <select
    data-width="full"
    aria-invalid="false"
    id="components-select--preview"
  >
    <option
      value
      selected
    >
      Velg et fylke …
    </option>
    <option value="akershus">
      Akershus
    </option>
    <option value="agder">
      Agder
    </option>
    <option value="buskerud">
      Buskerud
    </option>
    <option value="finnmark">
      Finnmark
    </option>
    <option value="innlandet">
      Innlandet
    </option>
    <option value="nordland">
      Nordland
    </option>
    <option value="rogaland">
      Rogaland
    </option>
  </select>
</div>
`;

exports[`Read Only 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-select--read-only"
  >
    Fylke
  </label>
  <select
    readonly
    id="components-select--read-only"
  >
    <option
      value
      selected
    >
      Velg et fylke …
    </option>
    <option value="akershus">
      Akershus
    </option>
    <option value="agder">
      Agder
    </option>
    <option value="buskerud">
      Buskerud
    </option>
    <option value="finnmark">
      Finnmark
    </option>
    <option value="innlandet">
      Innlandet
    </option>
    <option value="nordland">
      Nordland
    </option>
    <option value="rogaland">
      Rogaland
    </option>
  </select>
</div>
`;

exports[`With Error 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-select--with-error"
  >
    Fylke
  </label>
  <select
    aria-invalid="true"
    id="components-select--with-error"
    aria-describedby="components-select--with-error:validation:1"
  >
    <option value>
      Velg et Fylke …
    </option>
    <option value="akershus">
      Akershus
    </option>
    <option value="agder">
      Agder
    </option>
    <option value="buskerud">
      Buskerud
    </option>
    <option value="finnmark">
      Finnmark
    </option>
    <option value="innlandet">
      Innlandet
    </option>
    <option value="nordland">
      Nordland
    </option>
    <option value="rogaland">
      Rogaland
    </option>
  </select>
  <p
    data-field="validation"
    id="components-select--with-error:validation:1"
  >
    Velg et fylke
  </p>
</div>
`;

exports[`With Optgroup 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-select--with-optgroup"
  >
    Klassetrinn
  </label>
  <select id="components-select--with-optgroup">
    <option value>
      Velg klassetrinn …
    </option>
    <optgroup label="Barneskole">
      <option value="første">
        Første
      </option>
      <option value="andre">
        Andre
      </option>
      <option value="tredje">
        Tredje
      </option>
      <option value="fjerde">
        Fjerde
      </option>
      <option value="femte">
        Femte
      </option>
      <option value="sjette">
        Sjette
      </option>
      <option value="syvende">
        Syvende
      </option>
    </optgroup>
    <optgroup label="Ungdomsskole">
      <option value="åttende">
        Åttende
      </option>
      <option value="niende">
        Niende
      </option>
      <option value="tiende">
        Tiende
      </option>
    </optgroup>
    <optgroup label="Videregående">
      <option value="vg1">
        Vg1
      </option>
      <option value="vg2">
        Vg2
      </option>
      <option value="vg3">
        Vg3
      </option>
    </optgroup>
  </select>
</div>
`;
